# UserAuthSystem

./: .replit  ADMIN_APIs_GUIDE.md  COMPLETE_WORKING_NOTES.md  E-COMMERCE_API_GUIDE.md  E-COMMERCE_COMPLETE_SYSTEM.md  JWT_TOKEN_EXPLANATION.md  LOGIN_TOKEN_FLOW.md  PRODUCT_MANAGEMENT_API.md  README.md  alembic.ini  auth_system.db  main.py  pyproject.toml  replit.md
alembic/: env.py
alembic/versions/: .gitkeep
app/: dependencies.py
app/core/: config.py  database.py  security.py
app/middleware/: auth_middleware.py  compression_middleware.py
app/models/: __init__.py  cart.py  category.py  order.py  otp.py  product.py  rate_limit.py  token.py  user.py
app/routers/: admin.py  auth.py  auth_simplified.py  cart.py  categories.py  discounts.py  orders.py  products.py  users.py
app/schemas/: __init__.py  admin.py  cart.py  category.py  order.py  otp.py  product.py  simple_auth.py  token.py  user.py
app/services/: __init__.py  admin_service.py  auth_service.py  background_tasks.py  cache_service.py  cart_service.py  category_service.py  discount_service.py  email_service.py  order_service.py  otp_service.py  product_service.py  rate_limit_service.py  saved_items_service.py  simple_email_otp.py  sms_service.py  user_service.py  variant_service.py
app/utils/: __init__.py  advanced_pagination.py  exceptions.py  image_upload.py  logger.py
frontend/: README.md  api.js  app.js  index.html  package.json  server.js  test-login.html
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Dashboard.js  Login.js  Navbar.js  Profile.js  (+4 more)
(+2 files in other folders)
